[tool.poetry]
name = "pydub-showcase"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "pydub_showcase" }]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.4"
isort = "^5.12.0"
taskipy = "^1.12.0"
pre-commit = "^3.5.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . & ruff format ."
